# Logistics-Document-Guardian-LDG-

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/truth/: truth.csv
docs/: index.md
scripts/: install_tesseract_apt.sh  install_tesseract_brew.sh  install_tesseract_win.ps1  make_stub_truth.py
src/cli/: main.py
src/ldg/: __init__.py  rules.py  validator.py
src/ocr/: __init__.py  engine.py
src/ocr_ldg_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_engine.py  test_ocr_truth.py  test_validator.py
