[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logistics-doc-guardian"
version = "0.1.0"
description = "OCR + LDG validation pipeline"
authors = [{ name = "Macho", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = []
optional-dependencies.dev = [
  "black==24.3.0",
  "ruff==0.4.3",
  "mypy==1.10.0",
  "pytest>=8.1",
  "pytest-cov",
  "pydocstyle",
  "pre-commit>=3.7",
]

###############################################################################
# Black (포매터) — "개입 0" 원칙
###############################################################################
[tool.black]
line-length = 100          # 긴 URL·LLM 프롬프트 유지
target-version = ["py311"]
skip-string-normalization = true  # 프롬프트 보존

###############################################################################
# Ruff (린터 & 일부 타입 체크) — Flake8 + isort + pydocstyle 대체
###############################################################################
[tool.ruff]
target-version = "py311"
line-length = 100
fix = true                 # pre‑commit 단계에서 자동 수정
respect-gitignore = true

# 기본 Rule Set = E (pycodestyle) + F (pyflakes) + I (isort) + D (docstring)
select = ["E", "F", "I", "D", "B", "UP", "PL"]
ignore = [
  "D203",  # 한 줄 요약 직후 공백 1줄 강제 → Google style에서 중복
  "D213",  # 요약 "한 줄" 위치 규칙 충돌
]

[tool.ruff.per-file-ignores]
# 테스트·예제에서는 Docstring 검사 완화
"tests/**/*" = ["D"]
"examples/**/*" = ["D"]

###############################################################################
# Mypy (정적 타입 검사) — strict 모드 + Pydantic 플러그인
###############################################################################
[tool.mypy]
python_version = "3.11"
strict = true               # 모든 *strict* 옵션 일괄 활성
plugins = ["pydantic.mypy"] # Pydantic v2

# 3rd‑party stub 누락 무시 목록
[[tool.mypy.overrides]]
module = [
  "typer.*",
  "tesserocr.*",
]
ignore_missing_imports = true

###############################################################################
# Pytest — 경로 & coverage
###############################################################################
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

###############################################################################
# pre‑commit  — 저장 → 자동 포맷/린트
###############################################################################
[tool.pre-commit]
# yaml 형태 대신 pyproject 섹션 사용 (v3.7+)
repos = [
  { repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.4.3", hooks = [{ id = "ruff" }, { id = "ruff-format" }] },
  { repo = "https://github.com/psf/black", rev = "24.3.0", hooks = [{ id = "black" }] },
  { repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.10.0", hooks = [{ id = "mypy" }] },
  { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.6.0", hooks = [{ id = "check-added-large-files" }] },
]
