[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-ldg-project"
version = "0.1.0"
description = "OCR + LDG validation pipeline"
authors = [{ name = "Macho", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.12",
  "pydantic>=2.6",
  "python-docx",            # 예: 나중에 여분 파싱
  "pillow>=10.0",
  "openai",
]
optional-dependencies.dev = [
  "black==24.3.0",
  "ruff==0.4.3",
  "mypy==1.10.0",
  "pytest>=8.1",
  "pytest-cov",
  "pydocstyle",
  "pre-commit>=3.7",
]

###############################################################################
# Black (포매터) — "개입 0" 원칙
###############################################################################
[tool.black]
line-length = 100          # 긴 URL·LLM 프롬프트 유지
target-version = ["py311"]
skip-string-normalization = true  # 프롬프트 보존

###############################################################################
# Ruff (린터 & 일부 타입 체크) — Flake8 + isort + pydocstyle 대체
###############################################################################
[tool.ruff]
line-length = 100
target-version = "py311"
# fix = true                 # pre‑commit 단계에서 자동 수정 -> Usually not needed in pyproject directly if using pre-commit hook
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I", "D"] # Simplified selection as per example
ignore = ["D100"]                     # 모듈 Docstring 규칙 제외
per-file-ignores = { "tests/*" = ["D"], "scripts/*" = ["D"] }

[tool.ruff.format]
# Options for the formatter if needed, usually defaults are fine
# Or can remove if using `ruff format --check .` in CI is enough

###############################################################################
# Mypy (정적 타입 검사) — strict 모드 + Pydantic 플러그인
###############################################################################
[tool.mypy]
python_version = "3.11"
strict = true               # 모든 *strict* 옵션 일괄 활성
plugins = ["pydantic.mypy"] # Pydantic v2

# 3rd‑party stub 누락 무시 목록
[[tool.mypy.overrides]]
module = [
  "typer.*",
  "tesserocr.*",
]
ignore_missing_imports = true

###############################################################################
# Pytest — 경로 & coverage
###############################################################################
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

###############################################################################
# pre‑commit  — 저장 → 자동 포맷/린트
###############################################################################
[tool.pre-commit]
# yaml 형태 대신 pyproject 섹션 사용 (v3.7+)
repos = [
  { repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.4.3", hooks = [{ id = "ruff" }, { id = "ruff-format" }] },
  { repo = "https://github.com/psf/black", rev = "24.3.0", hooks = [{ id = "black" }] },
  { repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.10.0", hooks = [{ id = "mypy" }] },
  { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.6.0", hooks = [{ id = "check-added-large-files" }] },
]
