[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-ldg-project"
version = "0.1.0"
description = "OCR + LDG validation pipeline"
authors = [{ name = "Macho", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.12",
  "pydantic>=2.6",
  "python-docx",            # 예: 나중에 여분 파싱
  "pillow>=10.0",
  "openai",
]
optional-dependencies.dev = [
  "black==24.3.0",
  "ruff==0.4.3",
  "mypy==1.10.0",
  "pytest>=8.1",
  "pytest-cov",
  "pydocstyle",
  "pre-commit>=3.7",
]

###############################################################################
# Black (포매터) — "개입 0" 원칙
###############################################################################
[tool.black]
line-length = 100          # 긴 URL·LLM 프롬프트 유지
target-version = ["py311"]
skip-string-normalization = true  # 프롬프트 보존

###############################################################################
# Ruff (린터 & 일부 타입 체크) — Flake8 + isort + pydocstyle 대체
###############################################################################
[tool.ruff]
line-length = 100
target-version = "py311"
# fix = true                 # pre‑commit 단계에서 자동 수정 -> Usually not needed in pyproject directly if using pre-commit hook
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I", "D"] # Simplified selection as per example
# Use extend-ignore for better management
extend-ignore = [
  "D401",  # imperative‑mood docstring
  "E501",  # long lines > 100
  "D100", "D203", "D213"  # Previously ignored Docstring rules
]
per-file-ignores = { "tests/*" = ["D"], "scripts/*" = ["D"] }

[tool.ruff.format]
# Options for the formatter if needed, usually defaults are fine
# Or can remove if using `ruff format --check .` in CI is enough

###############################################################################
# Mypy (정적 타입 검사) — strict 모드 + Pydantic 플러그인
###############################################################################

# ─────────────────────────── mypy 권장 설정 ───────────────────────────
[tool.mypy]
python_version = "3.11"

# 1) 엄격 모드 + 가독성
strict = true
show_error_codes = true
pretty = true

# 2) src 레이아웃 중복‑모듈 오류 방지
mypy_path = "src"
explicit_package_bases = true      # "ldg.validator" / "src.ldg.validator" 중복 제거

# 3) 외부 import 처리 전략
#    - stub 없으면 경고로 두고, 정말 필요한 모듈만 override 로 무시
ignore_missing_imports = false
follow_imports = "skip"
no_implicit_reexport = true

# 4) 플러그인 (선택)
plugins = [
  "pydantic.mypy",                 # pydantic v2 사용 시
  # "sqlalchemy.ext.mypy.plugin",   # SQLAlchemy ORM 사용 시 주석 해제
]

# 5) 경고가 필요 없는 외부 라이브러리 stub 무시
[[tool.mypy.overrides]]
module = [
  "pytesseract.*", # Keep this if using pytesseract wrapper later
  "openai.*",      # Keep existing openai ignore
  "typer.*",       # Add back typer ignore from previous config
]
ignore_missing_imports = true

# 6) tests·scripts 폴더는 엄격 검사 제외(원하면 유지)
[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
ignore_errors = true

# 7) 빌드 산출물 등 완전 제외
exclude = [
  "^dist/.*$",
  "^build/.*$",
]
# ───────────────────────────────────────────────────────────────────

# This section is only needed if using pydantic plugin
[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_fields = true

###############################################################################
# Pytest — 경로 & coverage
###############################################################################
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

###############################################################################
# pre‑commit  — 저장 → 자동 포맷/린트
###############################################################################
[tool.pre-commit]
# yaml 형태 대신 pyproject 섹션 사용 (v3.7+)
repos = [
  { repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.4.3", hooks = [{ id = "ruff" }, { id = "ruff-format" }] },
  { repo = "https://github.com/psf/black", rev = "24.3.0", hooks = [{ id = "black" }] },
  { repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.10.0", hooks = [{ id = "mypy" }] },
  { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.6.0", hooks = [{ id = "check-added-large-files" }] },
]
